fix hamburger alignent and width

--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -113,12 +113,13 @@
     width: 40px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     outline: none;
     background-color: rgba(0, 0, 0, 0);
     cursor: pointer;
-    margin-right: 8px;
+    margin-right: 16px;
     z-index: 4000;
+    padding: 0;
 
     &.FacadeButtonOpen {
         transform: scale(2) translate(-16%, 2px);
@@ -136,10 +137,12 @@
     .main_navigation__hamburger {
         display: block;
     }
+
     .main_navigation__hamburger,
     .main_navigation__hamburger::before,
     .main_navigation__hamburger::after {
-        width: 2.2rem;
+        width: 2.4rem;
+
         height: 1.6px;
         background-color: $color-primary;
         display: block;
@@ -149,7 +152,8 @@
         content: "";
         position: absolute;
         left: 0;
-        transition: all 0.2s;
+        transition: all 0.3s ease-out;
+        backface-visibility: hidden;
     }
     .main_navigation__hamburger::before {
         top: -0.8rem;
